--- a/src/index.html
+++ b/src/index.html
@@ -15,19 +15,33 @@
                 <div class="quick_links">
                     <div class="quick_link text_centered">
                         <a href="https://youtube.com">
-                            <img src="../res/youtube.png" alt="image">
+                            <div class="quick_link_image">
+                                <img src="../res/youtube.png" alt="image">
+                            </div>
                             <h3>youtube</h3>
                         </a>
                     </div>
                     <div class="quick_link text_centered">
-                        <a href="https://youtube.com">
-                            <img src="../res/youtube.png" alt="image">
-                            <h3>quick_link</h3>
+                        <a href="https://messenger.com">
+                            <div class="quick_link_image">
+                                <img src="../res/messenger_logo.png" alt="image">
+                            </div>
+                            <h3>messenger</h3>
+                        </a>
+                    </div>
+                    <div class="quick_link text_centered">
+                        <a href="https://iacademy-college.neolms.com/">
+                            <div class="quick_link_image">
+                                <img src="../res/iacademy_logo.png" alt="image">
+                            </div>
+                            <h3>Neo LMS</h3>
                         </a>
                     </div>
                     <div class="quick_link text_centered">
                         <a href="https://youtube.com">
-                            <img src="../res/youtube.png" alt="image">
+                            <div class="quick_link_image">
+                                <img src="../res/youtube.png" alt="image">
+                            </div>
                             <h3>quick_link</h3>
                         </a>
                     </div>
