--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
         <div class="content_container">
             <div class="search_container text_centered">
                 <h1 class="homepage_header">HOMEPAGE</h1>
-                <input class="input_font" type="text" name="search_input" value="" placeholder="search">
+                <input class="input_font" type="search" id="search_input" name="search_input" value="" placeholder="Search">
 
                 <div class="quick_links">
                     <div class="quick_link text_centered">
@@ -51,6 +51,8 @@
             </div>
         </div>
     </body>
+    <script src="scripts/search.js">
+    </script>
     <script src="scripts/input.js">
     </script>
 </html>
