github quick link

--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,14 @@
                         </a>
                     </div>
                     <div class="quick_link text_centered">
+                        <a href="https://github.com">
+                            <div class="quick_link_image">
+                                <img src="../res/github_logo.png" alt="image">
+                            </div>
+                            <h3>github</h3>
+                        </a>
+                    </div>
+                    <div class="quick_link text_centered">
                         <a href="https://youtube.com">
                             <div class="quick_link_image">
                                 <img src="../res/youtube.png" alt="image">
