--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
         <div class="content_container">
             <div class="search_container text_centered">
                 <h1 class="homepage_header">HOMEPAGE</h1>
-                <input class="input_font" type="search" id="search_input" name="search_input" value="" placeholder="Search">
+                <input class="input_font" type="search" id="search_input" name="search_input" value="" placeholder="Search" autofocus>
 
                 <div class="quick_links">
                     <div class="quick_link text_centered">
@@ -32,7 +32,7 @@
                     <div class="quick_link text_centered">
                         <a href="https://iacademy-college.neolms.com/">
                             <div class="quick_link_image">
-                                <img src="../res/iacademy_logo.png" alt="image">
+                                <img src="../res/iac_svg.svg" alt="image">
                             </div>
                             <h3>Neo LMS</h3>
                         </a>
