svg stuff and colors

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
                     <div class="quick_link text_centered">
                         <a href="https://youtube.com">
                             <div class="quick_link_image">
-                                <img src="../res/youtube.png" alt="image">
+                                <img src="../res/youtube.svg" alt="image">
                             </div>
                             <h3>youtube</h3>
                         </a>
@@ -24,7 +24,7 @@
                     <div class="quick_link text_centered">
                         <a href="https://messenger.com">
                             <div class="quick_link_image">
-                                <img src="../res/messenger_logo.png" alt="image">
+                                <img src="../res/messenger.svg" alt="image">
                             </div>
                             <h3>messenger</h3>
                         </a>
@@ -32,7 +32,7 @@
                     <div class="quick_link text_centered">
                         <a href="https://iacademy-college.neolms.com/">
                             <div class="quick_link_image">
-                                <img src="../res/iac_svg.svg" alt="image">
+                                <img src="../res/iacademy.svg" alt="image">
                             </div>
                             <h3>Neo LMS</h3>
                         </a>
@@ -40,7 +40,7 @@
                     <div class="quick_link text_centered">
                         <a href="https://github.com">
                             <div class="quick_link_image">
-                                <img src="../res/github_logo.png" alt="image">
+                                <img src="../res/github.svg" alt="image">
                             </div>
                             <h3>github</h3>
                         </a>
