more cool stuff

--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,9 @@
     </head>
     <body>
         <div class="content_container">
+            <input class="input_font jetbrains_font" type="search" id="search_input" name="search_input" value="" placeholder="Search" autofocus>
             <div class="search_container text_centered">
                 <h1 class="homepage_header">HOMEPAGE</h1>
-                <input class="input_font jetbrains_font" type="search" id="search_input" name="search_input" value="" placeholder="Search" autofocus>
 
                 <div class="quick_links">
                     <div class="quick_link text_centered">
@@ -18,7 +18,7 @@
                             <div class="quick_link_image">
                                 <img src="../res/youtube.svg" alt="image">
                             </div>
-                            <h3>youtube</h3>
+                            <h3 class="quick_link_label">youtube</h3>
                         </a>
                     </div>
                     <div class="quick_link text_centered">
@@ -26,7 +26,7 @@
                             <div class="quick_link_image">
                                 <img src="../res/messenger.svg" alt="image">
                             </div>
-                            <h3>messenger</h3>
+                            <h3 class="quick_link_label">messenger</h3>
                         </a>
                     </div>
                     <div class="quick_link text_centered">
@@ -34,7 +34,7 @@
                             <div class="quick_link_image">
                                 <img src="../res/iacademy.svg" alt="image">
                             </div>
-                            <h3>Neo LMS</h3>
+                            <h3 class="quick_link_label">NeoLMS</h3>
                         </a>
                     </div>
                     <div class="quick_link text_centered">
@@ -42,18 +42,25 @@
                             <div class="quick_link_image">
                                 <img src="../res/github.svg" alt="image">
                             </div>
-                            <h3>github</h3>
+                            <h3 class="quick_link_label">github</h3>
                         </a>
                     </div>
                     <div class="quick_link text_centered">
-                        <a href="https://youtube.com">
+                        <a href="https://monkeytype.com">
                             <div class="quick_link_image">
-                                <img src="../res/youtube.png" alt="image">
+                                <img src="../res/monkeytype.svg" alt="image">
                             </div>
-                            <h3>quick_link</h3>
+                            <h3 class="quick_link_label">monkeytype</h3>
                         </a>
                     </div>
-                    
+                    <div class="quick_link text_centered">
+                        <a href="https://mail.google.com">
+                            <div class="quick_link_image">
+                                <img src="../res/gmail.svg" alt="image">
+                            </div>
+                            <h3 class="quick_link_label">GMail</h3>
+                        </a>
+                    </div>
                 </div>
 
             </div>
