spellcheck cuz yes

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div class="content_container">
-            <input class="input_font jetbrains_font" type="search" id="search_input" name="search_input" value="" placeholder="Search" autofocus>
+            <input class="input_font jetbrains_font" type="search" id="search_input" name="search_input" value="" placeholder="Search" autofocus spellcheck="true">
             <div class="search_container text_centered">
                 <h1 class="homepage_header">HOMEPAGE</h1>
 
